# small-compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt  out  todays-goals.txt
include/: codegen.h  common.h  lexer.h  parser.h  types.h
src/: codegen.c  common.c  lexer.c  lexer_table.c  main.c  parser.c  types.c
tests/: test.c
